--- a/.travis.yml
+++ b/.travis.yml
@@ -96,7 +96,7 @@ script:
   - if [ "x$TEST" = "x--enable-tests" ]; then cabal new-test -w ${HC} ${TEST} ${BENCH} all; fi
 
   # cabal check
-  - (cd hpython-* && cabal check)
+  #- (cd hpython-* && cabal check)
 
   # haddock
   - rm -rf ./dist-newstyle
