--- a/hpython.cabal
+++ b/hpython.cabal
@@ -3,14 +3,14 @@
 
 name:                hpython
 version:             0.1.0.0
--- synopsis:            
--- description:         
+synopsis:            Syntax tree and DSL for Python
+description:         Syntax tree and DSL for Python.
 license:             BSD3
 license-file:        LICENCE
 author:              Isaac Elliott
 maintainer:          isaace71295@gmail.com
--- copyright:           
--- category:            
+copyright:           Copyright (c) 2017-2018, Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230.
+category:            Python, Language Tools
 build-type:          Simple
 extra-source-files:  ChangeLog.md
                      benchmarks/pypy.py
