add source-repository to cabal file

--- a/hpython.cabal
+++ b/hpython.cabal
@@ -44,6 +44,11 @@ tested-with:           GHC == 8.0.2
                      , GHC == 8.2.2
                      , GHC == 8.4.3
 
+
+source-repository    head
+  type:              git
+  location:          git@github.com/qfpl/hpython.git
+
 library
   exposed-modules:     Data.Type.Set
                      , Data.Validate.Monadic
