--- a/hpython.cabal
+++ b/hpython.cabal
@@ -103,8 +103,7 @@ library
                      , parsers-megaparsec >=0.1 && <0.2
   hs-source-dirs:      src
   default-language:    Haskell2010
-  ghc-options:         -O
-                       -Wincomplete-patterns
+  ghc-options:         -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wunused-imports
                        -Werror
@@ -118,8 +117,7 @@ executable example
   hs-source-dirs:      example
   build-depends:       base >=4.9 && <5, lens, hpython, text
   default-language:    Haskell2010
-  ghc-options:         -O
-                       -Wincomplete-patterns
+  ghc-options:         -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wunused-imports
                        -Werror
@@ -136,8 +134,7 @@ benchmark bench
                      , text
                      , validation >= 1 && < 1.1
   default-language:    Haskell2010
-  ghc-options:         -O
-                       -Wincomplete-patterns
+  ghc-options:         -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wunused-imports
                        -Werror
