--- a/hpython.cabal
+++ b/hpython.cabal
@@ -107,9 +107,11 @@ library
                      , parsers-megaparsec >=0.1 && <0.2
   hs-source-dirs:      src
   default-language:    Haskell2010
-  ghc-options:         -Wincomplete-patterns
+  ghc-options:         -Wall
+                       -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wunused-imports
+                       -fno-warn-name-shadowing
   if flag(development)
     ghc-options:       -Werror
 
@@ -141,7 +143,8 @@ benchmark bench
                      , text
                      , validation >= 1 && < 1.1
   default-language:    Haskell2010
-  ghc-options:         -Wincomplete-patterns
+  ghc-options:         -Wall
+                       -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wunused-imports
   if flag(development)
@@ -177,8 +180,10 @@ test-suite hpython-tests
                      , these >=0.7.4 && <0.8
                      , validation >= 1 && < 1.1
   default-language:    Haskell2010
-  ghc-options:         -Wincomplete-patterns
+  ghc-options:         -Wall
+                       -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wunused-imports
+                       -fno-warn-name-shadowing
   if flag(development)
     ghc-options:       -Werror
