--- a/hpython.cabal
+++ b/hpython.cabal
@@ -162,6 +162,7 @@ test-suite hpython-tests
                      , Helpers
                      , LexerParser
                      , Optics
+                     , Parser
                      , Printer
                      , Roundtrip
                      , Scope
