--- a/hpython.cabal
+++ b/hpython.cabal
@@ -77,13 +77,13 @@ library
                      , Language.Python.Internal.Syntax.Numbers
                      , Language.Python.Internal.Syntax.Statement
                      , Language.Python.Internal.Syntax.Strings
-                     , Language.Python.Internal.Syntax.Whitespace
                      , Language.Python.Optics
                      , Language.Python.Optics.Validated
                      , Language.Python.Parse
                      , Language.Python.Render
                      , Language.Python.Syntax
                      , Language.Python.Syntax.Types
+                     , Language.Python.Syntax.Whitespace
                      , Language.Python.Validate.Scope
                      , Language.Python.Validate.Scope.Error
                      , Language.Python.Validate.Syntax
