Add top-level Language.Python.Validate module

--- a/hpython.cabal
+++ b/hpython.cabal
@@ -84,6 +84,7 @@ library
                      , Language.Python.Syntax
                      , Language.Python.Syntax.Types
                      , Language.Python.Syntax.Whitespace
+                     , Language.Python.Validate
                      , Language.Python.Validate.Scope
                      , Language.Python.Validate.Scope.Error
                      , Language.Python.Validate.Syntax
