--- a/hpython.cabal
+++ b/hpython.cabal
@@ -36,6 +36,7 @@ extra-source-files:  ChangeLog.md
                      test/files/pandas2.py
                      test/files/pypy.py
                      test/files/pypy2.py
+                     test/files/regex.py
                      test/files/requests.py
                      test/files/requests2.py
                      test/files/set.py
