--- a/hpython-test/hpython-test.cabal
+++ b/hpython-test/hpython-test.cabal
@@ -19,6 +19,11 @@ build-type:          Simple
 -- extra-source-files:
 cabal-version:       >=1.10
 
+tested-with:           GHC == 8.0.2
+                     , GHC == 8.2.2
+                     , GHC == 8.4.4
+                     , GHC == 8.6.1
+
 library
   exposed-modules:
     Generators.Common
