--- a/hpython-test/hpython-test.cabal
+++ b/hpython-test/hpython-test.cabal
@@ -24,6 +24,10 @@ tested-with:           GHC == 8.0.2
                      , GHC == 8.4.4
                      , GHC == 8.6.1
 
+flag development
+  default: False
+  manual: True
+
 library
   exposed-modules:
     Generators.Common
@@ -43,11 +47,13 @@ library
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall
-                       -Werror
                        -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wunused-imports
                        -fno-warn-name-shadowing
+  if flag(development)
+    ghc-options:       -Werror
+
 
 test-suite test
   main-is:             Main.hs
@@ -55,11 +61,12 @@ test-suite test
   hs-source-dirs:      test
   default-language:    Haskell2010
   ghc-options:         -Wall
-                       -Werror
                        -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wunused-imports
                        -fno-warn-name-shadowing
+  if flag(development)
+    ghc-options:       -Werror
   build-depends:       base >=4.9 && <4.13
                      , lens >= 4 && < 4.18
                      , text >=1.2 && <1.3
