--- a/hpython.cabal
+++ b/hpython.cabal
@@ -77,7 +77,6 @@ library
                      , Language.Python.Internal.Syntax.Ident
                      , Language.Python.Internal.Syntax.Import
                      , Language.Python.Internal.Syntax.IR
-                     , Language.Python.Internal.Syntax.ModuleNames
                      , Language.Python.Internal.Syntax.Operator.Binary
                      , Language.Python.Internal.Syntax.Operator.Unary
                      , Language.Python.Internal.Syntax.Numbers
@@ -90,6 +89,7 @@ library
                      , Language.Python.Syntax.CommaSep
                      , Language.Python.Syntax.Expr
                      , Language.Python.Syntax.Module
+                     , Language.Python.Syntax.ModuleNames
                      , Language.Python.Syntax.Statement
                      , Language.Python.Syntax.Types
                      , Language.Python.Syntax.Whitespace
