--- a/hpython.cabal
+++ b/hpython.cabal
@@ -85,6 +85,7 @@ library
                      , Language.Python.Optics
                      , Language.Python.Optics.Validated
                      , Language.Python.Parse
+                     , Language.Python.Parse.Error
                      , Language.Python.Render
                      , Language.Python.Syntax
                      , Language.Python.Syntax.CommaSep
