Add Colon data type, like Comma and Dot
Also move definitions to a new punctuation module

--- a/hpython.cabal
+++ b/hpython.cabal
@@ -90,6 +90,7 @@ library
                      , Language.Python.Syntax.CommaSep
                      , Language.Python.Syntax.Expr
                      , Language.Python.Syntax.Module
+                     , Language.Python.Syntax.Punctuation
                      , Language.Python.Syntax.Statement
                      , Language.Python.Syntax.Types
                      , Language.Python.Syntax.Whitespace
