Expose Idents module

--- a/hpython.cabal
+++ b/hpython.cabal
@@ -74,7 +74,6 @@ library
                      , Language.Python.Internal.Token
                      , Language.Python.Internal.Syntax.AugAssign
                      , Language.Python.Internal.Syntax.Comment
-                     , Language.Python.Internal.Syntax.Ident
                      , Language.Python.Internal.Syntax.Import
                      , Language.Python.Internal.Syntax.IR
                      , Language.Python.Internal.Syntax.ModuleNames
@@ -89,6 +88,7 @@ library
                      , Language.Python.Syntax
                      , Language.Python.Syntax.CommaSep
                      , Language.Python.Syntax.Expr
+                     , Language.Python.Syntax.Ident
                      , Language.Python.Syntax.Module
                      , Language.Python.Syntax.Statement
                      , Language.Python.Syntax.Types
