--- a/hpython.cabal
+++ b/hpython.cabal
@@ -76,7 +76,6 @@ library
                      , Language.Python.Internal.Syntax.Comment
                      , Language.Python.Internal.Syntax.Import
                      , Language.Python.Internal.Syntax.IR
-                     , Language.Python.Internal.Syntax.Numbers
                      , Language.Python.Optics
                      , Language.Python.Optics.Validated
                      , Language.Python.Parse
@@ -90,6 +89,7 @@ library
                      , Language.Python.Syntax.Operator.Binary
                      , Language.Python.Syntax.Operator.Unary
                      , Language.Python.Syntax.ModuleNames
+                     , Language.Python.Syntax.Numbers
                      , Language.Python.Syntax.Punctuation
                      , Language.Python.Syntax.Statement
                      , Language.Python.Syntax.Strings
