Moved AugAssign out of Internal

--- a/hpython.cabal
+++ b/hpython.cabal
@@ -72,7 +72,6 @@ library
                      , Language.Python.Internal.Render.Correction
                      , Language.Python.Internal.Syntax
                      , Language.Python.Internal.Token
-                     , Language.Python.Internal.Syntax.AugAssign
                      , Language.Python.Internal.Syntax.IR
                      , Language.Python.Optics
                      , Language.Python.Optics.Validated
@@ -80,6 +79,7 @@ library
                      , Language.Python.Parse.Error
                      , Language.Python.Render
                      , Language.Python.Syntax
+                     , Language.Python.Syntax.AugAssign
                      , Language.Python.Syntax.CommaSep
                      , Language.Python.Syntax.Comment
                      , Language.Python.Syntax.Expr
