--- a/hpython-test/hpython-test.cabal
+++ b/hpython-test/hpython-test.cabal
@@ -35,8 +35,7 @@ library
     Generators.General
     Generators.Sized
     Printer
-  -- other-modules:
-  -- other-extensions:
+    TrailingWhitespace
   build-depends:       base >=4.9 && <4.13
                      , hedgehog >= 0.5 && < 0.7
                      , lens >= 4 && < 4.18
@@ -44,6 +43,7 @@ library
                      , these
                      , hpython
                      , mtl
+                     , text >= 1.2
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall
