--- a/hpython.cabal
+++ b/hpython.cabal
@@ -91,6 +91,7 @@ library
                      , Language.Python.Syntax.ModuleNames
                      , Language.Python.Syntax.Numbers
                      , Language.Python.Syntax.Punctuation
+                     , Language.Python.Syntax.Raw
                      , Language.Python.Syntax.Statement
                      , Language.Python.Syntax.Strings
                      , Language.Python.Syntax.Types
