--- a/hpython.cabal
+++ b/hpython.cabal
@@ -139,6 +139,7 @@ executable example
                      , FixMutableDefaultArguments
                      , OptimizeTailRecursion
                      , Programs
+                     , Validation
   hs-source-dirs:      example
   build-depends:       base >=4.9 && <5, lens, hpython, text
   default-language:    Haskell2010
