--- a/hpython.cabal
+++ b/hpython.cabal
@@ -19,7 +19,7 @@ license-file:        LICENCE
 author:              Isaac Elliott
 maintainer:          isaace71295@gmail.com
 copyright:           Copyright (c) 2017-2018, Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230.
-category:            Python, Language Tools
+category:            Language
 build-type:          Simple
 extra-source-files:  ChangeLog.md
                      benchmarks/pypy.py
