--- a/hpython.cabal
+++ b/hpython.cabal
@@ -3,7 +3,7 @@
 
 name:                hpython
 version:             0.1
-synopsis:            Syntax tree and DSL for Python
+synopsis:            Python language tools
 description:
   `hpython` provides an abstract syntax tree for Python 3.5, along with a parser,
   printer, and syntax checker. It also contains optics for working with the AST,
